# gifcap

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  THIRD_PARTY.md  build-full.bash  build-slim.bash  vcpkg-configuration.json  vcpkg.json
.cargo/: config.toml
.github/workflows/: pages.yml
crates/gifcap/: Cargo.toml  build.rs
crates/gifcap-core/: Cargo.toml  build.rs
crates/gifcap-core/src/: error.rs  export.rs  export_format.rs  file_log.rs  lib.rs  paths.rs  session.rs
crates/gifcap-core/src/ffmpeg/: common.rs  gif.rs  mod.rs  mp4.rs  webp.rs
crates/gifcap-windows/: Cargo.toml
crates/gifcap-windows/src/: capture.rs  dpi.rs  dwm_caption.rs  lib.rs  screen.rs  tray.rs  win32_window.rs
crates/gifcap/src/: icon_bitmap.rs  main.rs  theme.rs
docs/: index.html
vcpkg-overlays/ffmpeg/: portfile.cmake
vcpkg-overlays/full/ffmpeg/: portfile.cmake
vcpkg-overlays/slim/ffmpeg/: portfile.cmake
