[package]
name = "gifcap-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Windows screen capture (GDI) for gifcap"

[dependencies]
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
] }
